--- a/experiments/rat/test.ipynb
+++ b/experiments/rat/test.ipynb
@@ -2,7 +2,19 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
+      "id": "1058efe8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "\n",
+        "sys.path.append(\"../..\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "id": "45d324d5",
       "metadata": {},
       "outputs": [],
@@ -10,13 +22,15 @@
         "import torch\n",
         "from torch.utils.data import DataLoader\n",
         "\n",
-        "from models import GTCRN, count_parameters\n",
+        "from rat_models import GTCRN_RAT\n",
+        "from models.gtcrn import GTCRN\n",
+        "from utils import count_parameters\n",
         "from train import VCTKDatasetFromList, validate_epoch, HybridLoss"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "id": "2ab40748",
       "metadata": {},
       "outputs": [
@@ -24,21 +38,32 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Loaded model, params: 23,669\n"
+            "Loaded model gtcrn, params: 23,669\n",
+            "Loaded model gtcrn_best, params: 23,669\n",
+            "Loaded model gtcrn_rat_chunk_8, params: 24,757\n",
+            "Loaded model gtcrn_rat_chunk_8_best, params: 24,757\n"
           ]
         }
       ],
       "source": [
-        "model = GTCRN()\n",
-        "checkpoint = torch.load(\"gtcrn_orig/checkpoints/model_trained_on_vctk.tar\", map_location=\"cpu\")\n",
-        "model.load_state_dict(checkpoint[\"model\"])\n",
-        "model.eval()\n",
-        "print(f\"Loaded model, params: {count_parameters(model):,}\")"
+        "models = {\n",
+        "    \"gtcrn\": (GTCRN, \"checkpoints/gtcrn/epoch_80.pt\"),\n",
+        "    \"gtcrn_best\": (GTCRN, \"checkpoints/gtcrn/best.pt\"),\n",
+        "    \"gtcrn_rat_chunk_8\": (GTCRN_RAT, \"checkpoints/gtcrn_rat/chunk_8/epoch_40.pt\"),\n",
+        "    \"gtcrn_rat_chunk_8_best\": (GTCRN_RAT, \"checkpoints/gtcrn_rat/chunk_16/best.pt\"),\n",
+        "}\n",
+        "for model_name, (model_cls, checkpoint_path) in models.items():\n",
+        "    model = model_cls()\n",
+        "    checkpoint = torch.load(checkpoint_path, map_location=\"cpu\")\n",
+        "    model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
+        "    model.eval()\n",
+        "    models[model_name] = model\n",
+        "    print(f\"Loaded model {model_name}, params: {count_parameters(model):,}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "id": "ab6f2fbd",
       "metadata": {},
       "outputs": [
@@ -46,15 +71,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Loaded 824 files from data/test.txt\n"
+            "Loaded 824 files from ../../VoiceBank+DEMAND/test.txt\n"
           ]
         }
       ],
       "source": [
+        "base_dir = \"../../VoiceBank+DEMAND/\"\n",
         "test_dataset = VCTKDatasetFromList(\n",
-        "    file_list=\"data/test.txt\",\n",
-        "    clean_dir=\"data/wav_clean\",\n",
-        "    noisy_dir=\"data/wav_noisy\",\n",
+        "    file_list=base_dir + \"test.txt\",\n",
+        "    clean_dir= base_dir + \"wavs_clean\",\n",
+        "    noisy_dir= base_dir + \"wavs_noisy\",\n",
         "    segment_len=None,\n",
         ")\n",
         "test_loader = DataLoader(test_dataset, batch_size=1, shuffle=False)"
@@ -62,14 +88,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "id": "d25d3897",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "af3b71b81d0546d093cb78b8fbcfe6e5",
+              "model_id": "2fd12d0e26e243d59ad67dbc2d52c45a",
               "version_major": 2,
               "version_minor": 0
             },
@@ -84,14 +110,82 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\n",
-            "PESQ: 2.872\n"
+            "gtcrn PESQ: 2.793\n",
+            "gtcrn SI-SNR: 18.64 dB\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "820b72ecc3b544b9b923e424e4372cf7",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Validation:   0%|          | 0/824 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "gtcrn_best PESQ: 2.804\n",
+            "gtcrn_best SI-SNR: 18.64 dB\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "56008efcf89b405e8104751c67e2d836",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Validation:   0%|          | 0/824 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "gtcrn_rat_chunk_8 PESQ: 2.858\n",
+            "gtcrn_rat_chunk_8 SI-SNR: 18.61 dB\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "f98dbea8c56f4f5a9cb1f7d91f179d09",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Validation:   0%|          | 0/824 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "gtcrn_rat_chunk_8_best PESQ: 2.726\n",
+            "gtcrn_rat_chunk_8_best SI-SNR: 18.64 dB\n"
           ]
         }
       ],
       "source": [
-        "val_loss, metrics = validate_epoch(model, test_loader, HybridLoss(), \"cpu\")\n",
-        "print(f\"\\nPESQ: {metrics['pesq']:.3f}\")"
+        "for model_name, model in models.items():\n",
+        "    val_loss, metrics = validate_epoch(model, test_loader, HybridLoss(), \"cpu\")\n",
+        "    print(f\"{model_name} PESQ: {metrics['pesq']:.3f}\")\n",
+        "    print(f\"{model_name} SI-SNR: {metrics['sisnr']:.2f} dB\")\n"
       ]
     },
     {
@@ -105,7 +199,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv (3.9.6)",
+      "display_name": ".venv (3.14.0)",
       "language": "python",
       "name": "python3"
     },
@@ -119,7 +213,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.14.0"
     }
   },
   "nbformat": 4,
