--- a/experiments/min_gru/test.ipynb
+++ b/experiments/min_gru/test.ipynb
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "speed-comparison",
       "metadata": {},
       "outputs": [
@@ -113,7 +113,24 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "  0%|          | 0/500 [00:00<?, ?it/s]"
+            "100%|██████████| 500/500 [03:49<00:00,  2.17it/s]\n",
+            "100%|██████████| 500/500 [03:42<00:00,  2.25it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "MPNet:    459.86 ms/forward\n",
+            "MinMPNet: 445.18 ms/forward\n",
+            "Speedup:  1.03x\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
           ]
         }
       ],
