--- a/experiments/min_gru/test.ipynb
+++ b/experiments/min_gru/test.ipynb
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "speed-comparison",
       "metadata": {},
       "outputs": [
@@ -113,8 +113,24 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 500/500 [03:05<00:00,  2.70it/s]\n",
-            " 17%|█▋        | 84/500 [00:16<01:21,  5.13it/s]"
+            "100%|██████████| 500/500 [02:45<00:00,  3.02it/s]\n",
+            "100%|██████████| 500/500 [01:40<00:00,  4.99it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "MPNet:    330.67 ms/forward\n",
+            "MinMPNet: 200.34 ms/forward\n",
+            "Speedup:  1.65x\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
           ]
         }
       ],
